--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: rails_6_template_development
+  database: studio_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: rails_6_template
+  #username: studio
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: <%= ENV.fetch('PG_DATABASE', 'rails_6_template_test') %>
+  database: <%= ENV.fetch('PG_DATABASE', 'studio_test') %>
   host:     <%= ENV.fetch('PG_HOST',  'localhost') %>
   username: <%= ENV.fetch('PG_USER', nil) %>
   password: <%= ENV.fetch('PG_PASSWORD', nil) %>
@@ -84,6 +84,6 @@ test:
 #
 production:
   <<: *default
-  database: rails_6_template_production
-  username: rails_6_template
+  database: studio_production
+  username: studio
   password: <%= ENV['RAILS_6_TEMPLATE_DATABASE_PASSWORD'] %>
