--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
-  "name": "rails_6_template",
+  "name": "app",
   "private": true,
   "dependencies": {
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.3.0",
+    "@rails/actioncable": "latest",
+    "@rails/activestorage": "latest",
+    "@rails/ujs": "latest",
+    "@rails/webpacker": "^6.0.0-rc.5",
+    "babel-plugin-macros": "^3.1.0",
+    "css-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.2.0",
     "stimulus": "^1.1.1",
+    "style-loader": "^3.2.1",
     "tailwindcss": "^1.9.5",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0"
   },
   "version": "0.1.0",
+  "babel": {
+    "presets": [
+      "./node_modules/@rails/webpacker/package/babel/preset.js"
+    ]
+  },
+  "browserslist": [
+    "defaults"
+  ],
   "devDependencies": {
-    "webpack-dev-server": "^3.11.0"
+    "@webpack-cli/serve": "^1.5.2",
+    "webpack-dev-server": "^4.0.0"
   }
 }
