--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "tailwindcss": "^1.9.5",
     "turbolinks": "^5.2.0",
     "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^4.8.0",
+    "xterm": "^4.13.0",
+    "xterm-addon-attach": "^0.6.0",
+    "xterm-addon-fit": "^0.5.0",
+    "xterm-addon-search": "^0.8.0"
   },
   "version": "0.1.0",
   "babel": {
@@ -27,6 +31,7 @@
   ],
   "devDependencies": {
     "@webpack-cli/serve": "^1.5.2",
+    "chokidar": "^3.5.2",
     "webpack-dev-server": "^4.0.0"
   }
 }
