change to bootstrap

--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "app",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.9.3",
     "@rails/actioncable": "latest",
     "@rails/activestorage": "latest",
     "@rails/ujs": "latest",
     "@rails/webpacker": "^6.0.0-rc.5",
     "babel-plugin-macros": "^3.1.0",
+    "bootstrap": "^5.1.0",
     "css-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.2.0",
+    "popper.js": "^1.16.1",
     "stimulus": "^1.1.1",
     "style-loader": "^3.2.1",
     "tailwindcss": "^1.9.5",
