--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
     "@rails/ujs": "latest",
     "@rails/webpacker": "^6.0.0-rc.5",
     "babel-plugin-macros": "^3.1.0",
-    "bootstrap": "^5.1.0",
-    "clipboard": "^2.0.8",
+    "clipboard": "^1.5.12",
     "copy-to-clipboard": "^3.3.1",
     "css-loader": "^6.2.0",
-    "jquery": "^3.6.0",
+    "inputmask": "^5.0.6",
+    "ion-rangeslider": "^2.3.1",
     "jquery-slimscroll": "^1.3.8",
+    "leaflet": "^1.7.1",
+    "litepicker": "^2.0.11",
+    "magnific-popup": "^1.1.0",
     "mini-css-extract-plugin": "^2.2.0",
     "popper.js": "^1.16.1",
     "prismjs": "^1.24.1",
     "stimulus": "^1.1.1",
     "style-loader": "^3.2.1",
     "tailwindcss": "^1.9.5",
+    "tiny-slider": "^2.9.3",
     "turbolinks": "^5.2.0",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
